fixed radar
- fixed radar animation where the slider would go 1 integer too far, where there was no slide available to show. this threw a NullReferenceException.

--- a/css/sections/radar-section.scss
+++ b/css/sections/radar-section.scss
@@ -57,6 +57,8 @@ section#radar{
 
         span#radar-time{
             justify-self: center;
+
+            font-weight: 500;
         }
 
         button#radar-playpause{
