--- a/css/sections/report-section.scss
+++ b/css/sections/report-section.scss
@@ -13,6 +13,10 @@ section#report{
         margin-bottom: 35px;
     }
 
+    span#guidance-text p{
+        margin: 30px 0;
+    }
+    
     @media(max-width:1170px){
         height: auto !important;
     }
