--- a/css/style.css
+++ b/css/style.css
@@ -579,6 +579,9 @@ section#report {
 section#report h3 {
   margin-bottom: 35px;
 }
+section#report span#guidance-text p {
+  margin: 30px 0;
+}
 @media (max-width: 1170px) {
   section#report {
     height: auto !important;
@@ -641,6 +644,7 @@ section#radar div#radar-container div#radar-controls {
 }
 section#radar div#radar-container span#radar-time {
   justify-self: center;
+  font-weight: 500;
 }
 section#radar div#radar-container button#radar-playpause {
   display: flex;
